# guitar-practice-dashboard

./: Cargo.toml  DIAGNOSTICS.md  FRETBOARD_SOLUTION.md  STACK_OVERFLOW_FIX.md  TESTING.md  build.rs  test.ps1
src/: audio.rs  main.rs  minimal_test.rs  music_theory.rs
ui/: main.slint
ui/components/: ChordSheet.slint  Fretboard.slint  Keys.slint  Metronome.slint  Scales.slint  VideoPanel.slint
