[package]
name = "guitar-practice-dashboard"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[dependencies]
slint = { version = "1.5", default-features = false, features = ["compat-1-2", "renderer-femtovg", "backend-winit"] }
once_cell = "1.19"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.18"

[build-dependencies]
slint-build = "1.5"
